--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -124,35 +124,41 @@ header .right .menu-icon {
 }
 
 .drawer,
-.drawer-closed {
+.drawer-closed,
+.drawer-animeted {
   height: 100vh;
   z-index: 1000;
   left: 0;
   top: 0;
 }
 .drawer .drawer-heading,
-.drawer-closed .drawer-heading {
+.drawer-closed .drawer-heading,
+.drawer-animeted .drawer-heading {
   padding-bottom: 30px;
 }
 .drawer .drawer-heading h3,
-.drawer-closed .drawer-heading h3 {
+.drawer-closed .drawer-heading h3,
+.drawer-animeted .drawer-heading h3 {
   font-size: 1.6rem;
   font-weight: bold;
 }
 .drawer .drawer-heading svg,
-.drawer-closed .drawer-heading svg {
+.drawer-closed .drawer-heading svg,
+.drawer-animeted .drawer-heading svg {
   color: #ffffff;
   font-size: 30px;
   cursor: pointer;
 }
 .drawer .drawer-content,
-.drawer-closed .drawer-content {
+.drawer-closed .drawer-content,
+.drawer-animeted .drawer-content {
   padding: 30px;
   width: 300px;
   background-color: #21262c;
 }
 .drawer .drawer-content ul > li > a,
-.drawer-closed .drawer-content ul > li > a {
+.drawer-closed .drawer-content ul > li > a,
+.drawer-animeted .drawer-content ul > li > a {
   display: block;
   text-transform: capitalize;
   font-size: 17px;
@@ -161,30 +167,36 @@ header .right .menu-icon {
   cursor: pointer;
 }
 .drawer .drawer-content ul > li > a:hover,
-.drawer-closed .drawer-content ul > li > a:hover {
+.drawer-closed .drawer-content ul > li > a:hover,
+.drawer-animeted .drawer-content ul > li > a:hover {
   color: rgba(255, 255, 255, 0.6980392157);
 }
 .drawer .drawer-content .pages-nav,
-.drawer-closed .drawer-content .pages-nav {
+.drawer-closed .drawer-content .pages-nav,
+.drawer-animeted .drawer-content .pages-nav {
   overflow: hidden;
   animation: close forwards 0.7s linear;
   -webkit-animation: close forwards 0.7s linear;
 }
 .drawer .drawer-content .page-nav-show,
-.drawer-closed .drawer-content .page-nav-show {
+.drawer-closed .drawer-content .page-nav-show,
+.drawer-animeted .drawer-content .page-nav-show {
   animation: show-full forwards 0.7s linear;
   -webkit-animation: show-full forwards 0.7s linear;
 }
 .drawer .drawer-content .page-links,
-.drawer-closed .drawer-content .page-links {
+.drawer-closed .drawer-content .page-links,
+.drawer-animeted .drawer-content .page-links {
   padding: 8px 20px;
 }
 .drawer .c-links a,
-.drawer-closed .c-links a {
+.drawer-closed .c-links a,
+.drawer-animeted .c-links a {
   padding-bottom: 12px;
 }
 .drawer .drawer-icons svg,
-.drawer-closed .drawer-icons svg {
+.drawer-closed .drawer-icons svg,
+.drawer-animeted .drawer-icons svg {
   padding: 0 20px 0 0;
   font-size: 20px;
   cursor: pointer;
@@ -195,7 +207,8 @@ header .right .menu-icon {
   -o-transition: 0.3s;
 }
 .drawer .drawer-icons svg:hover,
-.drawer-closed .drawer-icons svg:hover {
+.drawer-closed .drawer-icons svg:hover,
+.drawer-animeted .drawer-icons svg:hover {
   transform: translateY(-7px);
   -webkit-transform: translateY(-7px);
   -moz-transform: translateY(-7px);
@@ -203,23 +216,24 @@ header .right .menu-icon {
   -o-transform: translateY(-7px);
 }
 .drawer .drawer-closer,
-.drawer-closed .drawer-closer {
+.drawer-closed .drawer-closer,
+.drawer-animeted .drawer-closer {
   width: calc(100% - 300px);
   height: 100%;
   background-color: #21262c;
   opacity: 0;
 }
 
-.drawer {
+.drawer-animeted {
   display: flex;
 }
-.drawer .drawer-content {
+.drawer-animeted .drawer-content {
   position: absolute;
   z-index: 20000;
   animation: transformX 0.3s forwards ease-in;
   -webkit-animation: transformX 0.3s forwards ease-in;
 }
-.drawer .drawer-closer {
+.drawer-animeted .drawer-closer {
   animation: opacity 0.4s ease-in forwards;
   -webkit-animation: opacity 0.4s ease-in forwards;
   width: 100%;
