--- a/src/scss/pages/home/_landing-page.scss
+++ b/src/scss/pages/home/_landing-page.scss
@@ -13,6 +13,7 @@
   h1 {
     @media (max-width: 767px) {
       font-size: 2.5rem;
+      padding: 0 6px;
     }
     font-size: 3rem;
     margin: 10px auto 30px;
