--- a/src/scss/fixed-component/_buttons.scss
+++ b/src/scss/fixed-component/_buttons.scss
@@ -1,11 +1,12 @@
 @use "../varibales/varibales" as *;
 
-.white-btn {
+.white-btn,
+.blue-btn {
+  cursor: pointer;
   display: block;
-  padding: 20px 30px 19px;
-  background-color: $bg-white;
+  padding: 18px 28px 17px;
   font-size: 17px;
-  color: $btn-blue-color;
+  font-weight: bold;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -23,4 +24,39 @@
     -ms-transform: translateY(-8px);
     -o-transform: translateY(-8px);
   }
+}
+.white-btn {
+  background-color: $bg-white;
+  color: $btn-blue-color;
+}
+.blue-btn {
+  background-color: $blue-btn-color;
+  color: $bg-white;
+  &:hover {
+    transform: translateY(-8px);
+    -webkit-transform: translateY(-8px);
+    -moz-transform: translateY(-8px);
+    -ms-transform: translateY(-8px);
+    -o-transform: translateY(-8px);
+    box-shadow: 0px 3px 6px #3f78e0;
+  }
+}
+
+.close-btn {
+  position: relative;
+  width: fit-content;
+  cursor: pointer;
+  .close-circle {
+    font-size: 30px;
+  }
+  .close-x {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+  }
+}
+
+.blue-btn {
 }
