--- a/src/scss/fixed-component/_fixed-compenent.scss
+++ b/src/scss/fixed-component/_fixed-compenent.scss
@@ -1,1 +1,13 @@
 @forward "./buttons";
+
+.grid-box {
+  .right {
+    margin-left: 20px;
+
+    h3 {
+      font-weight: bold;
+      font-size: 1.3rem;
+      margin-bottom: 10px;
+    }
+  }
+}
