--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "normalize.css"; // Note this
+
 body {
   font-family: "Space Grotesk", sans-serif;
+}
+* {
+  box-sizing: border-box;
 }
