--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -134,6 +134,34 @@
     box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.2), 0 0 0 0.7rem rgba(255, 255, 255, 0.2), 0 0 0 1.4rem rgba(255, 255, 255, 0.2), 0 0 0 2rem rgba(255, 255, 255, 0);
   }
 }
+.about h4,
+.more-about h4 {
+  color: #3f78e0;
+  font-weight: bold;
+}
+.about .mb-5,
+.more-about .mb-5 {
+  margin-bottom: 20px !important;
+  margin-top: 10px !important;
+}
+.about h2,
+.more-about h2 {
+  color: #343f52;
+  font-weight: bold;
+  font-size: 1.9rem;
+  margin: 15px 0 6px;
+}
+.about h5,
+.more-about h5 {
+  color: #343f52;
+  font-weight: bold;
+}
+.about p,
+.more-about p {
+  color: #60697b;
+  line-height: 1.6;
+}
+
 .about {
   padding: 80px 0;
 }
@@ -152,10 +180,6 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-.about p {
-  color: #60697b;
-  line-height: 1.6;
-}
 .about .about-text {
   padding: 0 15px;
 }
@@ -168,24 +192,6 @@
   .about .about-text {
     width: 45%;
   }
-}
-.about .about-text h4 {
-  color: #3f78e0;
-  font-weight: bold;
-}
-.about .about-text .mb-5 {
-  margin-bottom: 20px !important;
-  margin-top: 10px !important;
-}
-.about .about-text h2 {
-  color: #343f52;
-  font-weight: bold;
-  font-size: 1.9rem;
-  margin: 15px 0 6px;
-}
-.about .about-text h5 {
-  color: #343f52;
-  font-weight: bold;
 }
 .about .lower-about {
   padding: 0 15px;
@@ -213,12 +219,11 @@
   color: #ffffff;
   font-weight: bold;
 }
+.services .left img {
+  max-width: 80%;
+}
 .services h1 {
-  font-weight: bold;
   color: #ffffff;
-  font-size: 2rem;
-  max-width: 800px;
-  margin: 0 auto 40px;
 }
 .services .grid-box .left {
   padding-left: 15px;
@@ -232,12 +237,272 @@
   color: #cacaca;
 }
 
+.more-about {
+  padding: 80px 15px;
+}
+.more-about .img-container {
+  position: relative;
+}
+@media (min-width: 768px) {
+  .more-about .img-container {
+    padding-left: 50px;
+  }
+}
+@media (min-width: 992px) {
+  .more-about .img-container {
+    width: 58%;
+  }
+}
+.more-about .img-container img {
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.more-about .img-container .grid-box {
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
+.more-about .img-container .grid-box {
+  display: none;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
+  width: -moz-fit-content;
+  width: fit-content;
+  position: absolute;
+  top: 18%;
+  left: -16px;
+  align-items: center;
+  padding: 16px 20px;
+  background-color: #ffffff;
+}
+@media (min-width: 768px) {
+  .more-about .img-container .grid-box {
+    display: flex;
+  }
+}
+.more-about .img-container .grid-box h3 {
+  margin-bottom: 0;
+  color: #60697b;
+  font-weight: bold;
+}
+.more-about .img-container .grid-box .left {
+  width: 40px;
+  height: 40px;
+  background-color: #e0e9fa;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.more-about .img-container .grid-box .left svg {
+  color: #3f78e0;
+}
+.more-about .img-container .box {
+  width: 160px;
+  padding: 12px 20px;
+  text-align: center;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
+  background-color: #ffffff;
+  position: absolute;
+  bottom: 10%;
+  left: -26px;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
+.more-about .img-container .box h6,
+.more-about .img-container .box h5 {
+  font-size: 18px;
+  font-weight: bold;
+  color: #60697b;
+}
+.more-about .img-container .box h5 {
+  margin-top: 10px;
+}
+.more-about .img-container .curved-progress {
+  width: 120px;
+  height: 60px;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.more-about .img-container .curved-progress::after {
+  content: "";
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 10px solid #3f78e0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-right-color: #e0e9fa;
+  transform: rotate(20deg);
+}
+@media (max-width: 991px) {
+  .more-about .more-about-text {
+    padding-top: 30px;
+  }
+}
+@media (min-width: 992px) {
+  .more-about .more-about-text {
+    width: 40%;
+  }
+}
+.more-about .more-about-text .lower-area {
+  margin-bottom: 6px;
+}
+.more-about .more-about-text .check {
+  background-color: #e0e9fa;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+.more-about .more-about-text .check svg {
+  font-size: 12px;
+  color: #3f78e0;
+}
+
+.case {
+  padding: 80px 15px;
+  background-color: #f6f7f9;
+}
+.case .fixed-heading h4 {
+  color: #3554c0;
+}
+.case .fixed-heading h1 {
+  color: #343f52;
+}
+.case .card {
+  overflow: hidden;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
+  background-color: #ffffff;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.case .img-container {
+  cursor: pointer;
+  overflow: hidden;
+}
+.case .img-container:hover::after {
+  opacity: 0.6;
+}
+.case .img-container:hover img {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+.case .img-container:hover span {
+  opacity: 1;
+  top: 50%;
+}
+.case .img-container img {
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.case .img-container span {
+  font-size: 18px;
+  font-weight: bold;
+  top: 47%;
+  left: 50%;
+  color: #ffffff;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  z-index: 2;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.case .img-container::after {
+  content: "";
+  z-index: 1;
+  background-color: #21262c;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.case .card-body {
+  padding: 40px 40px 30px;
+  border-bottom: 1px solid rgba(52, 63, 82, 0.07);
+  color: #343f52;
+}
+.case .card-body h3 {
+  text-transform: capitalize;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.case .card-footer {
+  padding: 20px 30px;
+  color: #aab0bc;
+}
+.case .card-footer .right,
+.case .card-footer .left {
+  cursor: pointer;
+}
+.case .card-footer .right {
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.case .card-footer .right:hover {
+  color: #3554c0;
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.6;
+  }
+}
+@keyframes showOff {
+  0% {
+    opacity: 0;
+    top: 49%;
+  }
+  100% {
+    opacity: 1;
+    top: 50%;
+  }
+}
 .header-animation {
   position: fixed;
   width: 100%;
   z-index: 100;
 }
 .header-animation header {
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
   background-color: #ffffff;
 }
 .header-animation header .right svg {
@@ -492,6 +757,16 @@ header .right .menu-icon {
   font-weight: bold;
   font-size: 1.3rem;
   margin-bottom: 10px;
+}
+
+.fixed-heading h4 {
+  font-size: 18px;
+}
+.fixed-heading h1 {
+  font-weight: bold;
+  font-size: 2rem;
+  max-width: 800px;
+  margin: 0 auto 40px;
 }
 
 p {
