--- a/src/scss/fixed-component/_fixed-compenent.scss
+++ b/src/scss/fixed-component/_fixed-compenent.scss
@@ -11,3 +11,15 @@
     }
   }
 }
+.fixed-heading {
+  h4 {
+    font-size: 18px;
+  }
+  h1 {
+    font-weight: bold;
+
+    font-size: 2rem;
+    max-width: 800px;
+    margin: 0 auto 40px;
+  }
+}
