--- a/src/scss/pages/home/_about.scss
+++ b/src/scss/pages/home/_about.scss
@@ -1,4 +1,29 @@
 @use "../../varibales/varibales" as *;
+.about,
+.more-about {
+  h4 {
+    color: $blue-btn-color;
+    font-weight: bold;
+  }
+  .mb-5 {
+    margin-bottom: 20px !important;
+    margin-top: 10px !important;
+  }
+  h2 {
+    color: $heading-color;
+    font-weight: bold;
+    font-size: 1.9rem;
+    margin: 15px 0 6px;
+  }
+  h5 {
+    color: $heading-color;
+    font-weight: bold;
+  }
+  p {
+    color: $dark-text;
+    line-height: 1.6;
+  }
+}
 .about {
   padding: 80px 0;
 
@@ -15,10 +40,7 @@
       -o-border-radius: 10px;
     }
   }
-  p {
-    color: $dark-text;
-    line-height: 1.6;
-  }
+
   .about-text {
     padding: 0 15px;
     @media (max-width: 991px) {
@@ -26,24 +48,6 @@
     }
     @media (min-width: 992px) {
       width: 45%;
-    }
-    h4 {
-      color: $blue-btn-color;
-      font-weight: bold;
-    }
-    .mb-5 {
-      margin-bottom: 20px !important;
-      margin-top: 10px !important;
-    }
-    h2 {
-      color: $heading-color;
-      font-weight: bold;
-      font-size: 1.9rem;
-      margin: 15px 0 6px;
-    }
-    h5 {
-      color: $heading-color;
-      font-weight: bold;
     }
   }
   .lower-about {
