--- a/src/scss/pages/home/_services.scss
+++ b/src/scss/pages/home/_services.scss
@@ -7,13 +7,13 @@
     color: $bg-white;
     font-weight: bold;
   }
+  .left {
+    img {
+      max-width: 80%;
+    }
+  }
   h1 {
-    font-weight: bold;
-
     color: $bg-white;
-    font-size: 2rem;
-    max-width: 800px;
-    margin: 0 auto 40px;
   }
   .grid-box {
     .left {
