--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -358,19 +358,6 @@
     width: 40%;
   }
 }
-.more-about .more-about-text .lower-area {
-  margin-bottom: 6px;
-}
-.more-about .more-about-text .check {
-  background-color: #e0e9fa;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-}
-.more-about .more-about-text .check svg {
-  font-size: 12px;
-  color: #3f78e0;
-}
 
 .case {
   padding: 80px 15px;
@@ -384,7 +371,7 @@
 }
 .case .card {
   overflow: hidden;
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
+  box-shadow: 0px 0px 18px 10px rgba(0, 0, 0, 0.08);
   background-color: #ffffff;
   border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -730,7 +717,7 @@ header .right .menu-icon {
   -moz-transform: translateY(-8px);
   -ms-transform: translateY(-8px);
   -o-transform: translateY(-8px);
-  box-shadow: 0px 3px 6px #3f78e0;
+  box-shadow: 0px 3px 12px 6px rgba(0, 0, 0, 0.1411764706);
 }
 
 .close-btn {
@@ -767,6 +754,20 @@ header .right .menu-icon {
   font-size: 2rem;
   max-width: 800px;
   margin: 0 auto 40px;
+}
+
+.lower-area {
+  margin-bottom: 6px;
+}
+.lower-area .check {
+  background-color: #e0e9fa;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+.lower-area .check svg {
+  font-size: 12px;
+  color: #3f78e0;
 }
 
 p {
