--- a/src/scss/fixed-component/_buttons.scss
+++ b/src/scss/fixed-component/_buttons.scss
@@ -38,7 +38,7 @@
     -moz-transform: translateY(-8px);
     -ms-transform: translateY(-8px);
     -o-transform: translateY(-8px);
-    box-shadow: 0px 3px 6px #3f78e0;
+    box-shadow: 0px 3px 12px 6px #00000024;
   }
 }
 
