--- a/src/scss/fixed-component/_fixed-compenent.scss
+++ b/src/scss/fixed-component/_fixed-compenent.scss
@@ -1,4 +1,5 @@
 @forward "./buttons";
+@use "../varibales/varibales" as *;
 
 .grid-box {
   .right {
@@ -21,5 +22,20 @@
     font-size: 2rem;
     max-width: 800px;
     margin: 0 auto 40px;
+  }
+}
+
+.lower-area {
+  margin-bottom: 6px;
+
+  .check {
+    background-color: #e0e9fa;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    svg {
+      font-size: 12px;
+      color: $blue-btn-color;
+    }
   }
 }
