--- a/src/scss/pages/home/_case.scss
+++ b/src/scss/pages/home/_case.scss
@@ -14,7 +14,7 @@
 
   .card {
     overflow: hidden;
-    box-shadow: 0px 0px 18px 10px rgb(0 0 0 / 8%)
+    box-shadow: 0px 0px 18px 10px rgb(0 0 0 / 8%);
     background-color: $bg-white;
 
     border-radius: 10px;
