--- a/src/scss/pages/home/_case.scss
+++ b/src/scss/pages/home/_case.scss
@@ -22,6 +22,9 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    p {
+      color: $dark-text;
+    }
   }
 
   .img-container {
