--- a/src/scss/pages/router/_navbar.scss
+++ b/src/scss/pages/router/_navbar.scss
@@ -23,6 +23,9 @@
     }
   }
 }
+.page-nav-box {
+  box-shadow: $box-shadow;
+}
 header {
   background-color: transparent;
   z-index: 100;
@@ -38,10 +41,14 @@ header {
         > a {
           padding: 25px 20px;
           display: block;
+
           font-size: 1.2rem;
           font-weight: bold;
           &:hover {
             color: #ffffffb2;
+          }
+          > svg {
+            font-size: 16px;
           }
           transition: 0.3s;
           -webkit-transition: 0.3s;
@@ -144,7 +151,7 @@ header {
     ul {
       > li {
         > a {
-          display: block;
+          display: flex;
           text-transform: capitalize;
           font-size: 17px;
           font-weight: bold;
