--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -603,6 +603,151 @@
   margin-top: 15px;
 }
 
+.our-team {
+  background-color: #f6f7f9;
+  padding: 80px 15px 0;
+}
+.our-team .container h4 {
+  color: #3f78e0;
+}
+.our-team .container h1 {
+  color: #343f52;
+}
+.our-team .container > p {
+  color: #60697b;
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.com-sec {
+  background-color: #f6f7f9;
+}
+
+.commnuity {
+  position: relative;
+  z-index: 1;
+  padding: 0 15px 80px;
+}
+@media (max-width: 767px) {
+  .commnuity {
+    padding-top: 80px;
+  }
+}
+.commnuity::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(0deg, #2c46a7, #3757c4);
+  z-index: -1;
+}
+@media (min-width: 768px) {
+  .commnuity::after {
+    height: calc(100% - 150px);
+  }
+}
+.commnuity .swiper-container {
+  overflow: hidden;
+  background-color: white;
+  max-width: 900px;
+  margin: auto;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
+  margin-bottom: 50px;
+}
+@media (min-width: 768px) {
+  .commnuity .swiper-container {
+    margin-top: -150px;
+  }
+}
+.commnuity .swiper {
+  max-width: 550px;
+  background-color: white;
+  padding: 35px 30px 80px;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .commnuity .swiper {
+    padding: 50px 30px 80px;
+  }
+}
+.commnuity .swiper q {
+  color: #60697b;
+  line-height: 1.7;
+  margin-bottom: 30px;
+  font-size: 1.5rem;
+  text-align: center;
+  display: block;
+}
+.commnuity .swiper .left {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.commnuity .swiper .right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.commnuity .swiper .right h5 {
+  font-size: 1.3rem;
+  color: #343f52;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.commnuity .swiper .right p {
+  font-size: 1.1rem;
+  color: #60697b;
+  text-transform: capitalize;
+}
+.commnuity .swiper .swiper-pagination-bullets {
+  bottom: 25px !important;
+}
+.commnuity .swiper .swiper-pagination-bullets span {
+  background-color: #60697b;
+  width: 12px;
+  height: 12px;
+}
+.commnuity .swiper .swiper-pagination-bullets span:hover {
+  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  -moz-transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  -o-transform: scale(1.5);
+}
+.commnuity .swiper .swiper-pagination-bullets .swiper-pagination-bullet-active {
+  background-color: transparent;
+  border: 3px solid #60697b;
+}
+.commnuity .swiper .swiper-pagination-bullets span {
+  margin-right: 8px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.commnuity .fixed-heading h1,
+.commnuity .fixed-heading h4 {
+  color: #ffffff;
+}
+.commnuity .fixed-heading h4 {
+  margin-top: 80px;
+}
+@media (min-width: 768px) {
+  .commnuity .fixed-heading h4 {
+    margin-top: 100px;
+  }
+}
+
 .header-animation {
   position: fixed;
   width: 100%;
@@ -806,7 +951,7 @@ header .right .menu-icon {
 .blue-btn {
   cursor: pointer;
   display: block;
-  padding: 18px 28px 19px;
+  padding: 15px 35px 16px;
   font-size: 17px;
   font-weight: bold;
   border-radius: 10px;
@@ -896,6 +1041,10 @@ header .right .menu-icon {
 .lower-area .check svg {
   font-size: 12px;
   color: #3f78e0;
+}
+
+.section-padding {
+  padding: 80px 15px;
 }
 
 p {
